--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,25 @@
+<% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@user.errors.count, 'error') %> prohibited this user being created</h2>
+
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 <br>
+<%= form_with model: @user do |form| %>
+  <%= form.label :email %>
+  <%= form.text_field :email, placeholder: "example@example.com" %><br>
+  <%= form.label :username %>
+  <%= form.text_field :username %><br>
+  <%= form.label :password %>
+  <%= form.password_field :password %><br>
+  <%= form.submit %>
+<% end %>
+<!--
 <form action="/users" method="post" accept-charset="utf-8">
   <label for="email">Email:</label>
   <input type="text" id="email" name="user[email]"><br><br>
@@ -7,5 +28,19 @@
   <label for="password">Password:</label>
   <input type="password" id="password" name="user[password]"><br><br>
   <input type="submit" value="Submit">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %> ">
 </form>
+-->
+
+<!--
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag(:email, "Email:" )%>
+  <%= text_field_tag(:email) %><br>
+  <%= label_tag(:username, "Username:" )%>
+  <%= text_field_tag(:username) %><br>
+  <%= label_tag(:email, "Password:" )%>
+  <%= password_field_tag(:password) %><br>
+  <%= submit_tag("Submit")%>
+<% end %>
+-->
+
